--- a/solve.tex
+++ b/solve.tex
@@ -72,4 +72,35 @@ $AB^2 = AC^2 + BC^2$
 Например, доказательство, довольно сильно похожее на школьное, когда-то придумал и опубликовал президент США.
 Подробнее об этом можно прочитать в статье в журнале "Квантик" №1 (2012) "Президент доказывает теоремы".
 
-2.3. 
+2.3. Хм, то, что надо доказать, как-то очень похоже на теорему Пифагора! Вот только прямоугольного треугольника с катетами $r_A$ и $r_B$ и гипотенузой $r$ как-то не видно...
+
+Мы не будем искать теорему Пифагора непонятно где, а применим её в самом очевидном месте:
+
+$AB^2 = AC^2 + BC^2$
+
+И как это может быть связано с тем, что надо доказать? Разве что мы будем знать, что $AB$, $AC$, $BC$ имеют какое-то отношение к $r$, $r_B$, $r_A$...
+
+Но ведь они имеют к ним отношение! 
+$AB$, $BC$, $AC$ -- соответственно гипотенузы подобных треугольников $ABC$, $BCH$, $ACH$, а $r$, $r_B$, $r_A$ -- это их радиусы вписанных окружностей!
+
+Тут самое время вспомнить (или узнать) такой важный факт:
+
+В подобных треугольниках отношение длин соответственных элементов равно коэффициенту подобия.
+
+Этот факт интуитивно практически очевиден.
+
+[картинка кто-то дует и раздувает один треугольник в другой]
+
+Давайте вначале применим его, а потом обсудим строгое доказательство.
+Вначале применим его для пары треугольников $ABC$, $BCH$:
+
+$\frac{r_B}{r} = \frac{BC}{AB}$, $r_B = r \cdot \frac{BC}{AB}$
+
+Теперь для пары $\triangle ABC$ и $\triangle ACH$:
+
+$\frac{r_A}{r} = \frac{AC}{AB}$, $r_A = r \cdot \frac{AC}{AB}$
+
+Получается, что 
+$r_A^2 + r_B^2 = r^2 \cdot  \left(\frac{AC}{AB}\right) + r^2 \left(\frac{BC}{AB}\right) = r^2 \cdot \frac{AC^2 + BC^2}{AB^2} = r^2$.
+
+[спойлер А теперь строгое доказательство...] 
