--- a/solve.tex
+++ b/solve.tex
@@ -104,3 +104,39 @@ $\frac{r_A}{r} = \frac{AC}{AB}$, $r_A = r \cdot \frac{AC}{AB}$
 $r_A^2 + r_B^2 = r^2 \cdot  \left(\frac{AC}{AB}\right) + r^2 \left(\frac{BC}{AB}\right) = r^2 \cdot \frac{AC^2 + BC^2}{AB^2} = r^2$.
 
 [спойлер А теперь строгое доказательство...] 
+
+3.1. Раз есть вписанная окружность, а нас что-то спрашивают про её центр, то неплохо бы провести радиусы к точкам касания:
+
+[картинка]
+
+Посмотрим на четырёхугольник $C B_1 I A_1$. Он похож на квадрат! Докажем это.
+
+Для начала это прямоугольник -- углы $B_1$ и $A_1$ прямые (радиус к точке касания перепендикулярен касательной), угол $C$ прямой, значит, $\angle A_1 I B_1 = 360^\circ - 90^\circ - 90^\circ - 90^\circ = 90^\circ$, то есть все углы прямые.
+
+Осталось доказать, что все стороны равны. Главное -- $A_1I = B_1I$ как радиусы! А если в прямоугольнике смежные стороны равны, то это точно квадрат.
+
+В квадрате диагональ в $\sqrt{2}$ раз больше стороны. В нашем квадрате сторона равна $r$, значит, диагональ $AI = \sqrt{2}r$.
+
+Попутно мы доказали, что $CA_1 = CB_1 = r$. Это весьма полезный факт, он пригодится нам в следующей задаче.
+
+3.2. Этот факт любопытен сам по себе -- обычно радиус вписанной окружности приходится считать как-то сложно (чаще всего, по формуле $r = \frac{S}{p} = \frac{\sqrt{p(p-a)(p-b)(p-c)}}{p}$, где $S$ -- площадь, $p$ -- полупериметр), а в случае прямоугольного треугольника формула получаетс суперпростой!
+
+Решение опирается на очень полезный факт:
+
+[картинка]
+
+Пусть $ABC$ -- произвольный треугольник, $A_1$, $B_1$, $C_1$ -- точки касания, $AB = c$, $AC = b$, $BC = a$, $p = \frac{a+b+c}{2}$ -- полупериметр. Тогда $AB_1 = AC_1 = p - a$, $BC_1 = BA_1 = p - b$, $CA_1 = CB_1 = p - c$.
+
+[спойлер Доказательство -- очень простое, попробуйте вначале сами!] доказательство...
+
+В нашей задаче от этого полезного факта нужно вот что: $CA_1 = p - c = \frac{a+b+c}{2} - c = \frac{a + b - c}{2}$. 
+
+В задаче 3.1 вы доказали (или прочитали в решении), что $r = CA_1$. Ага, то есть нам не надо вычислять радиус вписанной окружности, а надо узнать $CA_1$. Ура -- мы же узнали только что, что $CA_1 = \frac{a + b - c}{2}$, то есть $r = \frac{a + b - c}{2}$. Qued erat demonstrandum, как говорится.
+
+3.3. Что мы по сути доказали в задаче 3.1? Мы доказали, что в любом прямоугольном треугольнике расстояние от центра вписанной окружности до прямого угла в $\sqrt{2}$ раз больше радиуса вписанной окружности. Применим этот факт к $\triangle ACH$ -- получим, что $HI_A = \sqrt{2} r_A$. Применим этот факт к $\triangle BCH$ -- получим, что $HI_B = \sqrt{2} r_B$. А теперь сложим: 
+
+$HI_A^2 + HI_A^2 = (\sqrt{2} r_A)^2 + (\sqrt{2} r_B)^2 = 2r^2 = (\sqrt{2} r)^2 = AI^2$
+
+(Второе равенство -- это задача 2.3.)
+
+На самом деле мы вполне могли обойтись без задачи 3.1, повторив все рассуждения из задачи 2.3. Действительно, $AI$, $HI_A$, $HI_B$ -- соответственные 
