--- a/index.tex
+++ b/index.tex
@@ -74,6 +74,19 @@
 \end{enumerate}
 
 \item
+\begin{enumerate}
+    \item
+    Докажите, что $\angle I_A I I_B = 135^\circ$.
+    \item
+    Докажите, что $CI_A \perp BI_B$.
+    \item
+    Докажите, что $AI \perp I_AI_B$
+    \begin{leftbar}
+    Аналогично прошлой задаче докажите, что $CI_B \perp AI_A$, а потом воспользуйтесь тем, что высоты пересекаются в одной точке. 
+    \end{leftbar}
+\end{enumerate}
+
+\item
 Пусть $I_AI_B$ пересекается с $AC$ в точке $A'$, а с $BC$  в точке $B'$. В предыдущем пункте мы доказали, что $\triangle A'B'C$ "--- прямоугольный равнобедренный.
 \begin{enumerate}
     \item 
