--- a/solve.tex
+++ b/solve.tex
@@ -139,4 +139,18 @@ $HI_A^2 + HI_A^2 = (\sqrt{2} r_A)^2 + (\sqrt{2} r_B)^2 = 2r^2 = (\sqrt{2} r)^2 =
 
 (Второе равенство -- это задача 2.3.)
 
-На самом деле мы вполне могли обойтись без задачи 3.1, повторив все рассуждения из задачи 2.3. Действительно, $AI$, $HI_A$, $HI_B$ -- соответственные 
+На самом деле мы вполне могли обойтись без задачи 3.1, повторив все рассуждения из задачи 2.3. Действительно, $AI$, $HI_A$, $HI_B$ -- соответственные отрезки в подобных треугольниках $ABC$, $ACH$, $BCH$, и в рассуждениях задачи 2.3 достаточно просто заменить $r$ на $AI$, $r_A$ на $HI_A$, $r_B$ на $HI_B$ -- всё будет верно!
+
+3.4. Равенство, полученное в прошлой задаче, очень похоже на теорему Пифагора. Но вот беда: три отрезка не являются сторонами прямоугольного треугольника...
+
+Постойте! Отрезки $HI_A$ и $HI_B$ -- не просто отрезки, а катеты в прямоугольном треугольнике $HI_AI_B$! То, что он прямоугольный, мы доказали в задаче 1.1. Значит, по теореме Пифагора $I_AI_B^2 = HI_A^2 + HI_B^2$, а по прошлой задаче $AI^2 = HI_A^2 + HI_B^2$. Значит, $I_AI_B = AI$, чтд.
+
+На этом шаге очень интересно остановиться и посмотреть, какую же задачу мы решили:
+
+В прямоугольном треугольнике $ABC$ с прямым углом $C$ проведена высота $CH$. Точки $I$, $I_A$, $I_B$ -- центры вписанных окружностей треугольников $ABC$, $ACH$, $BCH$ соответственно. Докажите, что $I_AI_B = AI$.
+
+Как подступиться к этой задаче -- с ходу совершенно непонятно. Но у нас получилось решить её и попутно узнать много полезного!
+
+В следующих сериях мы узнаем ещё много интересного об этой конструкции.
+
+4.1. 
