--- a/solve.tex
+++ b/solve.tex
@@ -153,4 +153,4 @@ $HI_A^2 + HI_A^2 = (\sqrt{2} r_A)^2 + (\sqrt{2} r_B)^2 = 2r^2 = (\sqrt{2} r)^2 =
 
 В следующих сериях мы узнаем ещё много интересного об этой конструкции.
 
-4.1. 
+4.1. Проще всего подобие треугольников доказывается нахождением двух пар равных углов (например, как в решении задачи 2.1). Про треугольники $ABC$ и $I_AI_BH$ можно сказать только одно: они прямоугольные ($ABC$ -- по условию, $I_AI_BH$ -- по задаче 1.1). Найти ещё одну пару равных углов с ходу не получается. Что ж, значит, можно попробовать применить еще одну стратегию. Равные углы есть,   
