Generate new PDF

--- a/index.tex
+++ b/index.tex
@@ -14,7 +14,7 @@
 \begin{enumerate}[\bf 1.]
     
 \item
-Пусть $ABC$ "--- правильный треугольник с прямым углом $C$, $H$ "--- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ "--- центры окружностей, вписанных в треугольники $HBC$ и $HAC$ соответственно.
+Пусть $ABC$ "--- прямоугольный треугольник с прямым углом $C$, $H$ "--- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ "--- центры окружностей, вписанных в треугольники $HBC$ и $HAC$ соответственно.
 
 \begin{enumerate}[1.]
     \item Докажите, что $\angle I_A H I_B = 90^\circ$
